--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -959,20 +959,21 @@
 			<item id="ID_DOWNLOADS_URL" text="_Lisää Lähde..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_MONITOR" text="Monitori _Ikkuna"/>
-			<item id="ID_DOWNLOADS_EDIT" text="Kehittynyt _Editointi"/>
-			<item id="ID_DOWNLOADS_TORRENT_INFO" text="_Torrentti Info..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_MOVE_UP" text="Siirrä _Ylös"/>
 			<item id="ID_DOWNLOADS_MOVE_DOWN" text="Siirrä _Alas"/>
 			<item id="ID_DOWNLOADS_BOOST" text="_Hylkää Kaista Rajoitus"/>
 		</menu>
 		<item id="ID_DOWNLOADS_HELP" text="_Ohje..."/>
+		<separator/>
+		<item id="ID_DOWNLOADS_EDIT" text="Kehittynyt _Editointi"/>
 	</menu>
 	<menu name="CDownloadsWnd.Source">
 		<item id="ID_TRANSFERS_CONNECT" text="_Yhdistä"/>
 		<separator/>
 		<item id="ID_BROWSE_LAUNCH" text="_Selaa Käyttäjää"/>
 		<item id="ID_TRANSFERS_CHAT" text="_Keskustele Käyttäjän Kanssa"/>
+		<item id="ID_DOWNLOADS_COPY" text="Copy _URI"/>
 		<separator/>
 		<item id="ID_TRANSFERS_DISCONNECT" text="_Katkaise Yhteys"/>
 		<item id="ID_TRANSFERS_FORGET" text="_Unohda"/>
@@ -990,15 +991,16 @@
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Tyhjennä"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_COPY" text="Kopioi _URl"/>
-		<item id="ID_DOWNLOADS_TORRENT_INFO" text="Torrentti Info"/>
+		<item id="ID_DOWNLOADS_EDIT" text="Kehittynyt _Editointi"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_FILE_DELETE" text="_Poista Tiedostot"/>
 		<item id="ID_DOWNLOADS_RATE" text="_Arvioi Tiedosto..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Avaa"/>
-		<item id="ID_DOWNLOADS_TORRENT_INFO" text="Torrentti _Info"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Lopeta Jako"/>
+		<separator/>
+		<item id="ID_DOWNLOADS_EDIT" text="Torrentti _Info"/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Ohje..."/>
