--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default French Skin File -->
-<!-- Translation based on default-en.xml SVN rev.7320 -->
+<!-- Translation based on default-en.xml SVN rev.7350 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -350,7 +350,7 @@
 		<button id="ID_MEDIA_SAVE" text="Sauvegarder"/>
 	</toolbar>
 	<!-- IRC WINDOW -->
-	<toolbar name="CMainIrcBar">
+	<toolbar name="CIRCFrame">
 		<button id="ID_IRC_CONNECT" text="Connexion" tip="Connexion au salon IRC"/>
 		<button id="ID_IRC_DISCONNECT" text="Disconnect" tip="Déconnexion du salon IRC"/>
 		<rightAlign/>
