--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -173,7 +173,7 @@
 		<button id="ID_DOWNLOADS_CLEAR_COMPLETE" text="Letöltés törlése"/>
 		<separator/>
 		<button id="ID_DOWNLOADS_MONITOR" text="Monitor megjelenítése"/>
-		<button id="ID_DOWNLOADS_TORRENT_INFO" text="Torrent infó"/>
+		<button id="ID_DOWNLOADS_EDIT" text="Infó"/>
 		<rightAlign/>
 		<button id="ID_TOOLS_DOWNLOAD" text="Torrent/Link hozzáadása..."/>
 		<button id="ID_DOWNLOADS_CLEAR_COMPLETED" text="Kész törlése"/>
@@ -351,7 +351,7 @@
 		<button id="ID_MEDIA_SAVE" text="Mentés"/>
 	</toolbar>
 	<!-- IRC WINDOW -->
-	<toolbar name="CMainIrcBar">
+	<toolbar name="CIRCFrame">
 		<button id="ID_IRC_CONNECT" text="Connect" tip="Kapcsolódás a IRC hálózathoz"/>
 		<button id="ID_IRC_DISCONNECT" text="Disconnect" tip="Lekapcsolódás az IRC hálózatról"/>
 		<rightAlign/>
@@ -1069,16 +1069,16 @@
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Töröl"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_COPY" text="_URI másolása"/>
-		<item id="ID_DOWNLOADS_TORRENT_INFO" text="_Torrent infó"/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Infó"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_FILE_DELETE" text="_Fájl törlése"/>
 		<item id="ID_DOWNLOADS_RATE" text="Fájl _osztályozása..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Megnyitás"/>
-		<item id="ID_DOWNLOADS_TORRENT_INFO" text="_Torrent infó"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Seedelés leállítása"/>
-		<item id="ID_DOWNLOADS_EDIT" text="T_ulajdonságok"/>
+		<separator/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Torrent infó"/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Súgó..."/>
