--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Lithuanian Skin File -->
-<!-- Translation based on default-en.xml SVN rev.xxxx -->
+<!-- Translation based on default-en.xml SVN rev.7350 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -18,7 +18,7 @@
 		description="Shareaza Default Lithuanian Skin File"
 		link="http://shareaza.sourceforge.net/"
 		email="rrol2002(at)hotmail.com"
-		version="2.3.1.1"
+		version="2.3.2.0"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -350,7 +350,7 @@
 		<button id="ID_MEDIA_SAVE" text="Išsaugoti"/>
 	</toolbar>
 	<!-- IRC WINDOW -->
-	<toolbar name="CMainIrcBar">
+	<toolbar name="CIRCFrame">
 		<button id="ID_IRC_CONNECT" text="Jungtis" tip="Jungtis prie IRC"/>
 		<button id="ID_IRC_DISCONNECT" text="Atsijungti" tip="Atsijungti nuo IRC"/>
 		<rightAlign/>
