--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -351,7 +351,7 @@
 		<button id="ID_MEDIA_SAVE" text="Сохранить"/>
 	</toolbar>
 	<!-- IRC WINDOW -->
-	<toolbar name="CMainIrcBar">
+	<toolbar name="CIRCFrame">
 		<button id="ID_IRC_CONNECT" text="Подключиться" tip="Подключиться к IRC"/>
 		<button id="ID_IRC_DISCONNECT" text="Отключиться" tip="Отключиться от IRC"/>
 		<rightAlign/>
