--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Turkish Skin File -->
-<!-- Translation based on default-en.xml SVN rev.7320 -->
+<!-- Translation based on default-en.xml SVN rev.7350 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -349,7 +349,7 @@
 		<button id="ID_MEDIA_SAVE" text="Kaydet"/>
 	</toolbar>
 	<!-- IRC WINDOW -->
-	<toolbar name="CMainIrcBar">
+	<toolbar name="CIRCFrame">
 		<button id="ID_IRC_CONNECT" text="Bağlan" tip="IRC'ye Bağlan"/>
 		<button id="ID_IRC_DISCONNECT" text="Bağlantı kes" tip="IRC'den çık"/>
 		<rightAlign/>
